# qoe-test

./: .env.example  .env.production  .flake8  .gitignore  ARCHITECTURE_OVERVIEW.md  CONTRIBUTOR_GUIDE.md  DEPENDENCIES.md  Dockerfile  HLD.txt  Makefile  PRD.md  README.md  add_transport_elements.py  config.py  docker-compose.prod.yml  docker-compose.yml  feature04-prd.txt  fix_database.py  fix_models.py  fix_subdomain_column.py  force_cleanup.py  generate_docs.py  gunicorn.conf.py  init_db.py  init_full_db.py  init_subdomains.py  jest.config.js  jest.setup.js  mobile_qoe.db  mtn_qoe.db.backup_1750884557  package-lock.json  package.json  progress-tracker-feature04.txt  progress_tracker.md  pyproject.toml  refresh_models.py  requirements.txt  reset_admin.py  reset_and_setup.py  reset_db_and_setup_full.py  (+12 more)
app/: __init__.py  cli.py  context_processors.py  errors.py  forms.py
app/models/: __init__.py  network.py  simulation.py  subdomain.py  user.py
app/services/: simulation.py
app/static/css/: custom.css  feature04.css  style.css
app/static/js/: feature04_charts.js  main.js  network-topology.js
app/static/protocol_stack/: unified_stack.html  unified_stack.html.new
app/templates/: base.html  index.html  troubleshooting.html
app/templates/auth/: login.html  register.html
app/templates/dashboard/: domain.html  index.html  network_topology.html
app/templates/errors/: 404.html  500.html
app/templates/feature04/: qoe_impact.html  technical_deep_dive.html
app/templates/protocol_stack/: index.html
app/templates/reports/: index.html
app/templates/simulation/: compare.html  index.html
app/views/: api.py  auth.py  dashboard.py  docs.py  main.py  qoe_impact.py  reports.py  simulation.py  technical_deep_dive.py  troubleshooting.py
instance/: mtn_qoe.db
migrations/: README.md  add_subdomain_column.py
migrations/versions/: 278a9459a9e0_initial_migration.py  8c54c2d79688_initial_database_setup.py
nginx/: nginx.conf
qoe-tool-tests/: README.md  config.json  helpers.js  jest.setup.js  package.json
qoe-tool-tests/tests/: sample-login-test.js
scripts/: deploy.sh  start-production.sh
tests/: 01_login.test.js  02_dashboard.test.js  03_simulation.test.js  04_reports.test.js  05_troubleshooting.test.js  06_qoe_impact.test.js  07_technical_deep_dive.test.js  08_download_docs.test.js
